--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <div class="contact-item">
                         <div class="contact-icon">📧</div>
                         <h3>Email</h3>
-                        <p>atharva@example.com</p>
+                        <p>malwadkaratharva@gmail.com</p>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">💼</div>
@@ -416,10 +416,11 @@
                         <p>linkedin.com/in/atharvamalwadkar</p>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">🐙</div>
-                        <h3>GitHub</h3>
-                        <p>github.com/atharvou23</p>
+                        <div class="contact-icon">📱</div>
+                        <h3>Phone</h3>
+                        <p>+91 727676####</p>
                     </div>
+    
                 </div>
             </div>
         </div>
